--- a/questions/templates/questions/add.html
+++ b/questions/templates/questions/add.html
@@ -1,3 +1,6 @@
+{% extends 'home/base.html' %}
+
+
 {% block content %}
     <h1>Question</h1>
     <form method="POST" class="post-form">{% csrf_token %}
