Add initial cart

--- a/questions/templates/questions/detail.html
+++ b/questions/templates/questions/detail.html
@@ -8,5 +8,5 @@
 </ul>
 
 <a href="{% url 'edit' question.id %}">Edit</a>
-
+<a href="{% url 'questions.cart.add' question.id %}">Add to Exam</a>
 {% endblock %}
