--- a/questions/templates/questions/detail.html
+++ b/questions/templates/questions/detail.html
@@ -10,7 +10,7 @@
     <li> Answer: {{ question.answer_text}}</li>
 
     <li> Notes: {{ question.question_notes}}</li>
-    <li> Tags: {{ question.tags}}</li>
+    <li> Tags: {{ question.get_tags}}</li>
     
     <li> Figure 1: {{ question.figure_one}}</li>
     <li> Figure 2: {{ question.figure_two}}</li>
