--- a/questions/templates/questions/search.html
+++ b/questions/templates/questions/search.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <h1>Search</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <form action="/questions/search_results/" method="GET">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Search</button>
+        <input type="submit" value="Search">
     </form>
 {% endblock %}
