--- a/questions/templates/questions/add.html
+++ b/questions/templates/questions/add.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h1>Question</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
+    <form enctype="multipart/form-data" method="POST" class="post-form" >{% csrf_token %}
         {{ form.as_p }}
         
         <script type='text/javascript' src='http://code.jquery.com/jquery-1.8.2.js'></script>
