--- a/questions/templates/questions/detail.html
+++ b/questions/templates/questions/detail.html
@@ -12,10 +12,14 @@
     <li> Notes: {{ question.question_notes}}</li>
     <li> Tags: {{ question.get_tags}}</li>
     
+    <li> Figure Files: {{ question.get_figures }}</li>
+    
     <li> Figure 1: {{ question.figure_one}}</li>
     <li> Figure 2: {{ question.figure_two}}</li>
     <li> Figure 3: {{ question.figure_three}}</li>
 
+    <li> Num of tables: {{ question.get_num_tables }}</li>
+    
     <li> Latex Figure 1: {{ question.latex_figure_one}}</li>
     <li> Latex Figure 2:{{ question.latex_figure_two}}</li>
     <li> Latex Figure 3: {{ question.latex_figure_three}}</li> 
