--- a/questions/templates/questions/detail.html
+++ b/questions/templates/questions/detail.html
@@ -27,4 +27,8 @@
 
 <a href="{% url 'edit' question.id %}">Edit</a>
 <a href="{% url 'questions.cart.add' question.id %}">Add to Exam</a>
+<br>
+<br>
+<a href="{% url 'questions.deleteQuestion' question.id %}">Delete Question</a>
+
 {% endblock %}
