--- a/questions/templates/questions/index.html
+++ b/questions/templates/questions/index.html
@@ -13,11 +13,11 @@
     <p>No questions are available.</p>
 {% endif %}
 
-
+{% if user.is_superuser %}
 <a href="{% url 'add' %}">Add a question</a>
 <br>
 Dump all questions? Can't be undone.
 <br>
 <a href="{% url 'questions.deleteAll' %}">Delete All Questions</a>
-
+{% endif %}
 {% endblock %}
