--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,7 +11,10 @@
 <p><a href="{% url 'questions.search' %}">Search</a></p>
 </div>
 <div>
+{% if user.is_superuser %}
+
 <p><a href="{% url 'admin:index' %}">Admin</a> </p>
+{% endif %}
 </div>
 <br>
 
