--- a/questions/templates/questions/generate.html
+++ b/questions/templates/questions/generate.html
@@ -3,5 +3,5 @@
 {% block content %}
 
 
-<a href="{% url 'questions.cart.make' %}">Make Exam</a>
+<a href="{% url 'questions.cart.make' %}">Download your exam.</a>
 {% endblock %}
