--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,12 +1,14 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="/static/admin/css/base.css" />
+<link rel="stylesheet" type="text/css" href="/static/admin/css/dashboard.css" />
 {% load staticfiles %}
 {{ form.media }}
 
 </head>
 <body>
 {% if user.is_authenticated %}
-    <p>User: {{ user.username }}  <a href="{% url 'accounts:logout' %}">Logout</a> <a href="{% url 'accounts:password_change' %}">Change password</a> | <a href="/">Home</a> | <a href="{% url 'questions.cart' %}">Exam Cart</a>  <a href="{% url 'questions.search' %}">Search</a></p>
+    <p>User: {{ user.username }}  <a href="{% url 'accounts:logout' %}">Logout</a> | <a href="{% url 'accounts:password_change' %}">Change password</a> | <a href="/">Home</a> | <a href="{% url 'questions.cart' %}">Exam Cart</a> | <a href="{% url 'questions.search' %}">Search</a></p>
 {% else %}
     <p>Not yet logged in; log in below.</a></p>
 {% endif %}
