--- a/questions/templates/questions/cartoptions.html
+++ b/questions/templates/questions/cartoptions.html
@@ -20,6 +20,8 @@ Text to put after the questions.
 <input type="checkbox" name="images_in_folder" value="imagesInFolder">Put images in '/images/'<br>
 <input type="checkbox" name="figures_in_appendix" value="figuresInAppendix">Put figures in an appendix.<br>
 <input type="checkbox" name="omitPackages" value="omitPackages">Do not include packages<br>
+<input type="checkbox" name="inputFiles" value="inputFiles">Put each question part in a separate file<br>
+
   
 <br>
         <input type="submit" value="Generate Exam">
