--- a/questions/templates/questions/cart.html
+++ b/questions/templates/questions/cart.html
@@ -6,7 +6,7 @@
 {% if cart_question_list %}
     <ul>
     {% for question in cart_question_list %}
-		<li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a> <a href="{% url 'questions.cart.remove' question.id %}">Remove from cart</a></li>    {% endfor %}
+		<li><a href="{% url 'detail' question.id %}">{% autoescape off %}{{ question.getHTMLQuestionSource }}{% endautoescape  %}</a> <a href="{% url 'questions.cart.remove' question.id %}">Remove from cart</a></li>    {% endfor %}
     </ul>
     <a href="{% url 'questions.cart.empty' %}">Empty cart</a>  <a href="{% url 'questions.cart.options' %}">Generate exam</a>
 {% else %}
