--- a/questions/templates/questions/searchresults.html
+++ b/questions/templates/questions/searchresults.html
@@ -7,6 +7,8 @@
 You entered the following query:
     <ul>
     <li>Tags: {{ taglist }}</li>
+    <li>Difficulties: {{diffs}} </li>
+    <li>Search text: {{searchedText}} </li>    
     </ul>
 {% else %}
     <p>No tags searched</p>
