Add ability to re-order questions

--- a/questions/templates/questions/generate.html
+++ b/questions/templates/questions/generate.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-
+Do not hit the back button or your question ordering may not be preserved.<br>
 <a href="{% url 'questions.cart.make' %}">Download your exam.</a>
 {% endblock %}
