--- a/questions/templates/questions/cartoptions.html
+++ b/questions/templates/questions/cartoptions.html
@@ -1,6 +1,44 @@
 {% extends 'home/base.html' %}
 
 {% block content %}
+  
+<br>
+{% if cart_question_list %}
+
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
+  <style>
+  #sortable { list-style-type: none; margin: 0; padding: 0; width: 60%; }
+  #sortable li { margin: 0 3px 3px 3px; padding: 0.4em; padding-left: 1.5em; font-size: 1.4em; height: 18px; }
+  #sortable li span { position: absolute; margin-left: -1.3em; }
+  </style>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+
+<ul id="sortable" style="width: 524px;">
+
+    {% for question in cart_question_list %}
+		<li id="question_{{ question.id }}" class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>{% autoescape off %}{{ question.getHTMLQuestionSource }}{% endautoescape  %}</li>    
+        {% endfor %}
+  
+</ul>
+
+  <script>
+$(function () {
+    $("#sortable").sortable({
+        update: function (event, ui) {
+            var order = $(this).sortable("serialize");
+            $('#question_order').val(order);
+        }
+    }).disableSelection();
+
+});
+  </script>
+
+{% else %}
+    <p>No questions are available.</p>
+{% endif %}
+
+<br>
 
         <form action="{% url 'questions.cart.generate' %}" method="POST">{% csrf_token %}
          Exam name: <input type="text" name="examName"><br>
@@ -30,8 +68,8 @@ Text to put after the questions.
 <input type="checkbox" name="omitPackages" value="omitPackages">Do not include packages<br>
 <input type="checkbox" name="inputFiles" value="inputFiles">Put each question part in a separate file<br>
 
-  
-<br>
+    <input type="hidden" id="question_order" name="question_order" value="{% for question in cart_question_list %}{{ question.id }},{% endfor %}" />
+
         <input type="submit" value="Generate Exam">
     </form>
 {% endblock %}
