--- a/questions/templates/questions/detail.html
+++ b/questions/templates/questions/detail.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+{% if question.is_public or question.initial_author == user.username or user.is_superuser %}
+
 <h1> {% autoescape off %}{{ question.getHTMLQuestionSource }}{% endautoescape  %} </h1>
 <ul>
 	<li> Difficulty: {{ question.get_difficulty_name}} </li>
@@ -23,19 +25,28 @@
 
     <li> Last edited on: {{ question.last_edited}}</li>
     <li> Number of edits: {{ question.num_edits}}</li>
-    <li> Initial author: {{ question.initial_author}}</li>
-    <li> Editing authors: {{ question.contributing_authors}}</li>  
+    <li> Owner: {{ question.initial_author}}</li>
+    <li> Contributing authors: {{ question.contributing_authors}}</li>  
 
     <li> Last used on: {{ question.last_used}} </li>
     <li> Number of times used: {{ question.num_used}} </li>
+    
+    <li> Is public?: {{ question.is_public}} </li>
 </ul>
-
+{% if question.initial_author == user.username or user.is_superuser %}
 <a href="{% url 'edit' question.id %}">Edit</a>
+{% endif %}
 <a href="{% url 'questions.cart.add' question.id %}">Add to Exam</a>
 <br>
+{% if user.username != question.initial_author %}
 <br>
-{% if user.is_superuser %}
+<a href="{% url 'questions.copy' question.id %}">Make Private Copy</a>
+<br>
+{% endif %}
+<br>
+{% if user.is_superuser or user.username == question.initial_author %}
 
 <a href="{% url 'questions.deleteQuestion' question.id %}">Delete Question</a>
+{% endif %}
 {% endif %}
 {% endblock %}
