--- a/questions/templates/questions/cartoptions.html
+++ b/questions/templates/questions/cartoptions.html
@@ -42,6 +42,9 @@ $(function () {
 
         <form action="{% url 'questions.cart.generate' %}" method="POST">{% csrf_token %}
          Exam name: <input type="text" name="examName"><br>
+<textarea rows="4" cols="50" id="description_text" name="description_textarea" type="text">
+Description
+</textarea>         
 <textarea rows="4" cols="50" id="header_text" name="header_textarea" type="text">
 Text to put before the questions.
 </textarea>
