--- a/exams/templates/exams/recent.html
+++ b/exams/templates/exams/recent.html
@@ -6,7 +6,7 @@
 {% if latest_exam_list %}
     <ul>
     {% for exam in latest_exam_list %}
-		<li>There should be a link to an exam here.</li>    {% endfor %}
+		<li><a href="{% url 'exams.viewExam' exam.id %}">{{exam.exam_name}}</a></li>    {% endfor %}
     </ul>
 {% else %}
     <p>No exams are available.</p>
