--- a/questions/templates/questions/cartoptions.html
+++ b/questions/templates/questions/cartoptions.html
@@ -44,7 +44,7 @@ $(function () {
          Exam name: <input type="text" name="examName"><br>
 <textarea rows="4" cols="50" id="description_text" name="description_textarea" type="text">
 Description
-</textarea>         
+</textarea> <br>        
 <textarea rows="4" cols="50" id="header_text" name="header_textarea" type="text">
 Text to put before the questions.
 </textarea>
@@ -56,7 +56,7 @@ Text to put after the questions.
 <input type="checkbox" name="omitQuestionSource" value="omitQuestionSource">Omit question source<br>
 <input type="checkbox" name="omitInstructions" value="omitInstructions">Omit question instructions<br>
 <input type="checkbox" name="omitAnswers" value="omitAnswers">Omit question answers<br>
-<input type="checkbox" name="omitFigures" value="omitAnswers">Omit question figures<br>
+<input type="checkbox" name="omitFigures" value="omitFigures">Omit question figures<br>
 <input type="checkbox" name="omitMeta" value="omitMeta">Omit question meta from comments<br>
 
 
